2008-09-10  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.[ch]:
	* src/tracker-indexer/tracker-main.c: 
	* src/trackerd/tracker-main.c: 
	(tracker_env_check_xdg_dirs): Added this function to make sure we
	have write access to XDG_DATA_HOME. On the Maemo platform, this is
	/usr/share, on Ubuntu this is $HOME/.local/share. We default to
	the later in cases where we don't have write access and can't
	create the XDG_DATA_HOME location.
	
2008-09-10  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/trackerd/tracker-rdf-query.c: Fixed some problems with
	OR operator in RDF queries.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.c:
	(tracker_db_move_service): Switch the to and from parameters round
	so the move statement works.
	
	* src/tracker-indexer/tracker-indexer.c: Now use the PathInfo
	struct for move events and also the event queue instead of dealing
	with them specifically there and then. Now rename or move events
	on files work.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: Cleaned up the code.
	* src/tracker-indexer/tracker-indexer.c: When finishing do 2
	things. First make sure we flush BEFORE we unset the flag to say
	we are indexing. This way the flush function doesn't just return.
	Also when finished, we now close the index. This means that the
	daemon can use the new index when it reopens it after indexing.

2008-09-09  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/tracker-extract/tracker-extract-mp3.c:
	* src/tracker-extract/tracker-extract-gstreamer.c: The audio
	extractors now check that a minimum amount of information
	(title, artist, album, genre) has been found and if not, 
	"tracker:unknown" value is used for these crucial fields.
	This change can be considered a hack and should be reverted
	when tracker supports finding unexisting metadata.

2008-09-09  Martyn Russell  <martyn@imendio.com>
